@@ -1,5 +1,11 @@
 package com.ecommerce.member.dto.requset;
 
+import io.micrometer.common.util.StringUtils;
+import lombok.AllArgsConstructor;
+import lombok.NoArgsConstructor;
+
+@NoArgsConstructor
+@AllArgsConstructor
 public class RegisterRequest {
 
     public String email;
@@ -13,7 +19,7 @@ public class RegisterRequest {
     public String password;
 
     public boolean hasNotPassword() {
-        return password == null || password.isBlank();
+        return StringUtils.isBlank(password) || StringUtils.isEmpty(password);
     }
 
 }
